--- a/src/App.sass
+++ b/src/App.sass
@@ -1,10 +1,20 @@
+body
+  background-color: #f8f8f8
+
+.zoom-background-hover
+  transform: scale(1.05)
+  transition-duration: 0.5s
+
 .products-list
-  border: 1px #000 solid
+  background: #fff
+  border: 1px #3f4e5d solid
   display: flex
   list-style: none
   height: 110px
   padding: 5px
-  margin: 15px
+  margin: 15px 0
+  box-shadow: 0 4px 5px #3f4e5d
+  border-radius: 4px
   .item
     display: flex
     justify-content: center
@@ -13,9 +23,71 @@
     cursor: pointer
     &:hover
       @extend .zoom-background-hover
+.product-view
+  margin-bottom: 20px
+  .product
+    display: flex
+    margin-top: 20px
+    background: #fff
+    box-shadow: 0 1px 2px rgba(0,0,0,.25)
+    padding: 25px
+    min-height: 300px
+    border-radius: 4px
+    .image
+      width: 50%
+      display: flex
+      justify-content: center
+      align-items: center
+    .description
+      display: flex
+      flex-direction: column
+      align-items: flex-start
+      justify-content: flex-start
+      padding: 0 10px
+      width: 50%
 
+.reviews
+  margin-top: 20px
+  background: #fff
+  box-shadow: 0 1px 2px rgba(0,0,0,.25)
+  padding: 25px
+  border-radius: 4px
+  .review
+    padding: 10px
+    border: 1px #000 solid
+    border-radius: 8px
+    margin: 10px
+  .create-reviews
+    display: flex
+    justify-content: center
+    button
+      margin: 20px
+      cursor: pointer
+      height: 40px
+      width: 130px
+      border: none
+      border-radius: 5px
+      box-shadow: 0 3px 4px rgba(0,0,0,.5)
+    button:focus
+      outline: none
 
+.spinner
+  padding-top: 100px
+  display: flex
+  flex-direction: column
+  align-items: center
+  height: 140px
+  justify-content: space-between
 
-.zoom-background-hover
-  transform: scale(1.05)
-  transition-duration: 0.5s
+.auth-modal
+  position: absolute
+  top: 100px
+
+div[class^=styles_modal]
+  min-width: 280px
+  .change-status
+    margin-top: 10px
+    text-decoration: underline
+    cursor: pointer
+  button
+    margin-top: 10px
